# quickserve-ai

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run.py
data/: faq_kb.json  intents_test.jsonl  intents_train.jsonl  products_seed.csv
models/: baseline.joblib  faq_index.faiss
models/ner/: meta.json
models/ner/ner/: moves
models/ner/vocab/: strings.json
notebooks/: 02_baseline_tfidf_logreg.ipynb  03_distilbert_finetune.ipynb  04_spacy_ner_train.ipynb
scripts/: build_faq_index.py  evaluate_models.py  full_demo_test.py  seed_db.py  train_baseline.py  train_spacy_ner.py  verify_distilbert.py
src/quickserve/agent/: graph.py  nodes.py  state.py
src/quickserve/api/: main.py
src/quickserve/db/: models.py
src/quickserve/llm/: groq_client.py  prompts.py
src/quickserve/nlp/: intent_classifier.py  ner.py  preprocess.py  rag.py
src/quickserve/ui/: app.py
tests/: test_api.py  test_ner.py  test_preprocess.py  test_rag.py
