[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickserve-ai"
version = "0.1.0"
description = "NLP-Based Automated Customer Service Chatbot"
requires-python = ">=3.11"
dependencies = [
    # NLP / ML
    "scikit-learn>=1.4",
    "transformers>=4.40",
    "torch>=2.2",
    "datasets>=2.19",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
    "joblib>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    # LangChain / LangGraph / Groq
    "langchain>=0.2",
    "langchain-groq>=0.1",
    "langgraph>=0.1",
    "langchain-community>=0.2",
    # Backend
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    # Frontend
    "streamlit>=1.35",
    # Testing
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/quickserve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
